--- a/style.css
+++ b/style.css
@@ -65,17 +65,17 @@ body * {
 }
 
 #switch button {
-  width: 32px;
-  height: 32px;
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
 
   position: absolute;
+  width: 32px;
+  height: 32px;
   top: 50%;
-  left: 0;
+  left: 50%;
   z-index: 1;
-  transform: translateY(-50%);
+  transform: translate(0%, -50%);
   animation: slide-back 0.4s;
 }
 
@@ -169,18 +169,18 @@ footer {
 /* animation */
 @keyframes slide-in {
 	from {
-			left: 0;
+		left: 50%;
 	}
 	to {
-		left: 50%;
+		left: 0;
 	}
 }
 
 @keyframes slide-back {
 	from {
-		left: 50%;
+		left: 0;
 	}
 	to {
-		left: 0;
+		left: 50%;
 	}
 }
